--- a/SmartPhoneTechAdvisor/SmartPhoneTechAdvisor/Pages/Index.cshtml
+++ b/SmartPhoneTechAdvisor/SmartPhoneTechAdvisor/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Compare phones</h1>
     <form method="post">
         <div class="container">
             <div class="row justify-content-center">
